--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,7 @@
     <body>
         <div class="main-content">
         {{>header}}
+        <p>This site was created by Amanda. It uses data from mapbox.com and weatherapp.com</p>
         <img class="portrait" src="img/download.jpeg">
         </div>
         {{>footer}}
